--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <script src="https://use.fontawesome.com/fa0914e52c.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
     <div class="container">
@@ -14,12 +16,44 @@
         <h1 class="text-center"><i class="fa fa-newspaper-o" aria-hidden="true"></i>  New York Times Artices</h1>
       </div>
     </div>
-    <div id="wrapper">
-      <div id="articles" class="table-striped table-hover"></div>
-      <div id="comments" class="table-striped table-hover"></div>
+    <div class="container" id="wrapper">
+      <div class="row">
+        <div class="col-md-12">
+          <table class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th class="text-center">Link</th>
+                <th class="text-center">Headline</th>
+                <th class="text-center">Summary</th>
+              </tr>
+            </thead>
+            <tbody id="articles">
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <br>
+      <br>
+      <div class="row">
+        <div class="col-md-12">
+          <h4 class="text-center">Comment</h4>
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th class="text-center">Title</th>
+                  <th class="text-center">Body</th>
+                </tr>
+              </thead>
+              <tbody id="comments"></tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <br>
+      <br>
+      <div class="text-center" id="comment"></div>
+      <br>
     </div>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="app.js"></script>
     <style>
       body {
         font-family: 'Scope One', serif;
